# speedfetch

./: .gitignore  CMakeLists.txt  DOCUMENTATION.md  LICENSE  Makefile  PROJECT_INFO.md  README.md  START_HERE.md  USAGE.md  build.sh  config.example.json  install.sh  migrate_logos.py  speedfetch_1.0-1_amd64.deb  test_distros.sh
debian/: changelog  control  copyright  postinst  prerm  rules
src/: ascii_art.cpp  ascii_art.h  battery.h  config.cpp  config.h  cpu.h  disk.h  exec.h  gpu.h  main.cpp  memory.h  network.h  os.h  packages.h  shell.h  system.h  system_info.cpp  system_info.h  terminal.h
src/core/: exec.h  file.h  math.h  strings.h
